# broadway-sessions-manager

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  dockerfile  kickoff.sh  nginx.conf
data/: db.sqlite
db_controller/: Cargo.toml
db_controller/migrations/2024-03-18-133310_initial/: down.sql  up.sql
db_controller/migrations/2024-03-21-164718_active_sessions/: down.sql  up.sql
db_controller/migrations/2024-03-27-115710_invite_key/: down.sql  up.sql
db_controller/migrations/2024-07-14-144244_replaced pid with docker id/: down.sql  up.sql
db_controller/migrations/2024-07-15-195746_adding_container_ip_field/: down.sql  up.sql
db_controller/src/: lib.rs  schema.rs
db_controller/src/service_managment/: mod.rs  modules.rs
db_controller/src/user_managment/: mod.rs  models.rs
vroot_config/: apps.json  dockerfile  watchdog.sh
web_api/: Cargo.toml
web_api/public/: package-lock.json  package.json  tailwind.config.js
web_api/public/static/scripts/: startSession.js
web_api/public/static/styles/: index.css
web_api/public/templates/: index.html.hbs
web_api/public/templates/pages/: files.html.hbs  home.html.hbs  login.html.hbs  signup.html.hbs
web_api/public/templates/partials/: adminBoxOptions.html.hbs  broadwayBoxOptions.html.hbs  defaultBox.html.hbs  error.html.hbs  loading.hmtl.hbs  selector.html.hbs
web_api/src/: filemanager.rs  login.rs  main.rs  session.rs  user_actions.rs
