[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_controller = { path = "../db_controller"}
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates =  {version = "0.1.0", features = ["handlebars"]}
dircpy = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
docker-api = "0.14.0"